hphp/hack/test/typecheck/aktuple/dynamic_index_non_lvalue_ok.php.exp
File "dynamic_index_non_lvalue_ok.php", line 12, characters 12-16:
Invalid argument (Typing[4110])
File "dynamic_index_non_lvalue_ok.php", line 16, characters 19-21:
Expected int
File "dynamic_index_non_lvalue_ok.php", line 9, characters 18-22:
But got string
